Version svn

* preliminary support for MILTER protocol, check config file
* support for definitive checks: it's now possible to write 
  checks that cause grossd to block or pass (whitelisting)

- improved thread counting in thread_pool.c

Issues fixed:
#46: Make dnsbl checking run time configurable (RFE)
#47: Grossd will not run any checks if configured with --disable-dnsbl

Version 0.8.2

- updating mappings example in INSTALL
- logging less verbose (one line per query)

Issues fixed:
#39: blocker queries cause segmentation fault
#43: Lot's of open udp connections when using grosscheck

Version 0.8.1

A couple of bugs fixed.

Issues fixed:
#35: grossd crashes when starting
#36: synchronization still loses one update message

Version 0.8.0

In short: Important changes from the previous version

* You must configure protocols in config file. This is done via
  'protocol' config file parameter. Either 'protocol = sjsms' or
  'protocol = postfix' or both.
* 'sync_host' and 'peer_host' has been deprecated. Use new
  'sync_listen' and 'sync_peer' options.


The longer list:
- Checks are now done in thread pools, which makes it easier to
  develop new checks, like Sophos blocker or SPF. 
- grossd can log aggregate statistics about query results. Check
  'stat_type' and 'stat_interval' configuration parameters.
- grossd can now serve different query protocols simultaneously.
  This is controlled by the 'protocol' config parameter.
- Preliminary support for Sophos blocker. Not yet production
  quality, needs testing. Check issue #19.
- check also doc/examples/grossd.conf, which make install will
  install as the default config file if there is no existing
  grossd.conf

Issues fixed:
#16: synchronization is confusing to configure
#18: documented and configurable timeouts
#23: Customizable SMTP error messages
#26: connections could come from different IP addresses
#27: configurable greylisting time
#28: Bug in the mapping file example