@@ -84,9 +84,10 @@ protocol = postfix
 # DEFAULT: grey_delay = 10
 
 # 'check' lists all the checks grossd will do to judge if client_ip is
-# suspicious or not. 'dnsbl' is the only check tested in production. 
-# You may configure 'blocker' for querying Sophos blocker service.
-# DEFAULT: check = dnsbl
+# suspicious or not. 
+check = dnsbl
+#check = rhsbl
+#check = dnswl
 
 # 'dnsbl' is a dns domain name of the dnsbl that 'dnsbl' check will query
 # There are no defaults, but below is a list of dnsbls you could be using
@@ -95,6 +96,15 @@ dnsbl = bl.spamcop.net
 dnsbl = combined.njabl.org
 dnsbl = cbl.abuseat.org
 dnsbl = dnsbl.sorbs.net
+
+# 'rhsbl' is analogous to 'dnsbl'
+#rhsbl = rhsbl.sorbs.net
+
+# 'dnswl' is analogous to 'dnsbl'. Remember that dnswl is a *definitive*
+# check, that is grossd waits for the check to complete before deciding
+# how to respond. This may cause unwanted latency. Highly recommended if
+# you use grossd as a traditional greylister.
+#dnswl = query.bondedsender.org 
 
 # 'blocker_host' is the host name of the Sophos blocker server.
 # blocker_host =
